@@ -39,6 +39,8 @@ Features
      http://www.lavrsen.dk/foswiki/bin/view/Motion/MotionLog (Angel Carpintero)
    * Added a macro MOTION_LOG , no need to add __FUNCTION__ anymore. (Angel Carpintero)
    * Added EXIF feature for jpeg images , http://www.lavrsen.dk/foswiki/bin/view/Motion/ExifTaggingPatch (Wim Lewis)
+   * Improve detection of av_register_protocol() for ffmpeg (Angel Carpintero).
+  
 
 Bugfixes
    * Avoid segfault detecting strerror_r() version GNU or SUSv3. (Angel Carpintero)
